# cookiecutter-data-science

./: .gitignore  README.md  cookiecutter.json  requirements.txt
hooks/: post_gen_project.py  post_gen_project.sh  pre_gen_project.py
tests/: test_creation.py
{{ cookiecutter.repo_name }}/: .dvcignore  .env  .envrc  .gitignore  .pre-commit-config.yaml  .secrets  Makefile  eval.dvc  process_data.dvc  pyproject.toml  raw_data.dvc  train.dvc
{{ cookiecutter.repo_name }}/docs/: commands.rst
{{ cookiecutter.repo_name }}/docs_sources/mkdocs/: gen_ref_pages.py  index.md  mkdocs.yml
{{ cookiecutter.repo_name }}/great_expectations/: great_expectations.yml
{{ cookiecutter.repo_name }}/great_expectations/expectations/: .ge_store_backend_id
{{ cookiecutter.repo_name }}/src/: README.md
{{ cookiecutter.repo_name }}/tests/: conftest.py
