[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
{%- set license_classifiers = {
    "MIT license": "MIT",
    "Apache Software License 2.0": "Apache-2.0",
    "GNU General Public License v3.0": "GPL-3.0-only",
    "GNU General Public License v2.0": "GPL-2.0-only",
    "BSD 3-Clause 'New' or 'Revised' License": "BSD-3-Clause",
    "GNU Lesser General Public License v2.1": "LGPL-2.1-only",
    "BSD 2-Clause 'Simplified' License": "BSD-2-Clause",
} %}
{%- if cookiecutter.open_source_license in license_classifiers %}
license = "{{ license_classifiers[cookiecutter.open_source_license] }}"
{%- endif %}
readme = "README.md"
keywords = ["{{ cookiecutter.project_name }}"]
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
packages = [
    { include = "{{cookiecutter.module_name}}", from = "src" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}/issues"
"Source" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
# "Documentation" = "https://{{ cookiecutter.project_name }}.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "^0.5.1"

[tool.poetry.dev-dependencies]
pip = "^19.2.3"
cookiecutter
awscli
wheel = "^0.33.6"
watchdog = "^0.9.0"
flake8 = "^3.7.8"
tox = "^3.14.0"
coverage = "^4.5.4"
Sphinx = "^1.8.5"
mkdocs
mkdocs-cinder
Click = "^7.0"
pytest = "^4.6.5"
pytest-runner = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"